<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SternerLearn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="emailHint">Email address</string>
    <string name="passwordHint">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="title_activity_main_menu">USERNAME</string>
    <string name="title_activity_register">Register</string>
    <string name="replace">to be replaced dynamically</string>
    <string name="repeatPassword">Confirm password</string>
    <string name="realName">First and last name</string>
    <string name="accountType0">Guardian</string>
    <string name="accountType1">Student</string>
    <string name="accountType2">Teacher</string>
    <string name="title_activity_assignments">Assignments</string>
    <string name="title_activity_not_implemented">Not Implemented</string>
    <string name="not_implemented">This page has not been implemented yet. Please wait for the next iteration!</string>
    <string name="title_activity_student_main_menu">Main Menu</string>
    <string name="title_activity_teacher_main_menu">Main Menu</string>
    <string name="title_activity_grades">GradesActivity</string>
    <string name="title_activity_classes">ClassesActivity</string>
    <string name="title_activity_infractions">InfractionsActivity</string>
    <string name="title_activity_link_accounts">LinkAccountsActivity</string>
    <string name="title_activity_parental_control">ParentalControlActivity</string>
    <string name="title_activity_my_list">MyListActivity</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="title_activity_add_class">AddClassActivity</string>
    <string name="submit">Submit</string>
    <string name="title_activity_modify_class">ModifyClassActivity</string>
    <string name="add_class">Class Name</string>
    <string name="title_activity_add_infraction">AddInfractionActivity</string>
    <string name="infraction_desc">Infraction Description</string>
    <string name="student_name">Student\'s Name</string>
    <string name="tardy">Tardy</string>
    <string name="absent">Absent</string>
    <string name="detention">Detention</string>
    <string name="suspended">Suspended</string>
    <string name="expelled">Expelled</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_locations">LocationsActivity</string>
    <string name="student_password">Student password</string>
    <string name="link_accounts">Link Accounts</string>
    <string name="student_email">Student email</string>
    <string name="textview">TextView</string>
    <string name="title_activity_add_student_to_class">AddStudentToClassActivity</string>
    <string name="choose_the_date_you_wish_to_view_">Choose the date you wish to view.</string>
    <string name="choose_the_date_and_time_interval_">Choose the date and time interval.</string>
    <string name="go">Go</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yy">YY</string>
    <string name="title_activity_add_assignment">Add Assignment</string>
    <string name="assign_name">Assignment Name</string>
    <string name="class_desc">Description</string>
    <string name="title_activity_add_grade">Add Grade</string>
    <string name="yyyy">YYYY</string>
    <string name="title_activity_display_messages">DisplayMessagesActivity</string>
    <string name="choose_a_date_">Choose a date:</string>
    <string name="choose_a_time_">Choose a time:</string>
    <string name="title_activity_display_locations">DisplayLocationsActivity</string>
    <string name="title_activity_powerup">Powering Up</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="powering_up">Powering Up....</string>
    <string name="points_worth">Total Points: </string>
    <string name="date_due">Due Date: </string>
    <string name="date_submitted">Date Submitted: </string>
    <string name="points_received">Points Received: </string>

</resources>