<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
    	tools:context=".AddInfractionActivity" >

	    <EditText
	        android:id="@+id/student_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="20dp"
	        android:hint="@string/student_name"
	        android:ems="10"
	        android:inputType="textPersonName" >
	
	        <requestFocus />
	    </EditText>
	    
	    <RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/student_name"
	        android:layout_below="@+id/student_name" >
	
	        <RadioButton
	            android:id="@+id/radio0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/tardy" />
	
	        <RadioButton
	            android:id="@+id/radio1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/absent" />
	
	        <RadioButton
	            android:id="@+id/radio2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/detention" />
	        
	        <RadioButton
	            android:id="@+id/radio3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/suspended" />
	        
	        <RadioButton
	            android:id="@+id/radio4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/expelled" />            
	    </RadioGroup>
	
	    <EditText
	        android:id="@+id/desc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/radioGroup1"
	        android:layout_below="@+id/radioGroup1"
	        android:ems="10"
	        android:inputType="textMultiLine"
	        android:hint="@string/infraction_desc" />
	
	    <Button
	        android:id="@+id/linkAccountsButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/desc"
	        android:layout_below="@+id/desc"
	        android:onClick="handleSubmit"
	        android:text="@string/submit" />
	
	</RelativeLayout>
</ScrollView>