<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MessagesActivity" >

    <TextView
        android:id="@+id/messagesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_the_date_you_wish_to_view_" />

    <EditText
        android:id="@+id/messageDD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/messageMM"
        android:layout_below="@+id/messageMM"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/dd"
        android:inputType="number" />

    <Button
        android:id="@+id/messageGoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageYYYY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/go" />

    <EditText
        android:id="@+id/messageMM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messagesEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/mm"
        android:inputType="number" />

    <EditText
        android:id="@+id/messageYYYY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/messageDD"
        android:layout_below="@+id/messageDD"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/yyyy"
        android:inputType="numberPassword" >

        <requestFocus />
    </EditText>

</RelativeLayout>