<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        tools:context=".RegisterActivity" >

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailAddress"
            android:layout_below="@+id/emailAddress"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordRepeat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_below="@+id/password"
            android:ems="10"
            android:hint="@string/repeatPassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/realName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordRepeat"
            android:layout_below="@+id/passwordRepeat"
            android:ems="10"
            android:hint="@string/realName"
            android:inputType="textPersonName" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/realName"
            android:layout_below="@+id/realName" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/replace" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replace" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replace" />
        </RadioGroup>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/radioGroup1"
            android:layout_below="@+id/radioGroup1"
            android:onClick="handleRegister"
            android:text="@string/register" />
    </RelativeLayout>

</ScrollView>