<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocationsActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/messageEditText"
        android:layout_below="@+id/locationsDatePicker"
        android:layout_marginTop="34dp"
        android:text="@string/choose_a_time_" />

    <TimePicker
        android:id="@+id/locationsTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01" />

    <DatePicker
        android:id="@+id/locationsDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/messageEditText"
        android:layout_below="@+id/messageEditText" />

    <TextView
        android:id="@+id/messageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:text="@string/choose_a_date_" />

    <Button
        android:id="@+id/locationsGoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/messageEditText"
        android:layout_toRightOf="@+id/locationsTimePicker"
        android:text="@string/go" />

</RelativeLayout>